[package]
name    = "crawler-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow     = "1.0.68"
axum       = { version = "0.6.4", features = ["macros"] }
futures    = "0.3.25"
serde_json = "1.0.91"
reqwest    = { version = "0.11.14", features = ["json"] }
sqlx       = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio      = { version = "1.24.2", features = ["full"] }
serde      = "1.0.152"
thiserror = "1.0.38"
